# cmake_train_example

./: CMakeLists.txt  main.cpp
Libs/: CMakeLists.txt
Libs/buildInfo/: CMakeLists.txt
Libs/buildInfo/Inc/: buildinfo.h
Libs/buildInfo/Src/: buildinfo.cpp
Libs/easyCalc/: CMakeLists.txt
Libs/easyCalc/Inc/: easycalc.hpp
